CREATE SCHEMA IF NOT EXISTS analytics;

CREATE TABLE IF NOT EXISTS analytics.dim_tempo (
    sk_tempo integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    data date NOT NULL UNIQUE,
    dia integer NOT NULL,
    mes integer NOT NULL,
    trimestre integer NOT NULL,
    ano integer NOT NULL
);

CREATE TABLE IF NOT EXISTS analytics.dim_cliente (
    sk_cliente integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cliente_id integer NOT NULL,
    nome varchar(120) NOT NULL,
    cidade varchar(80) NOT NULL,
    valido_de date NOT NULL,
    valido_ate date,
    atual boolean NOT NULL
);

CREATE TABLE IF NOT EXISTS analytics.dim_produto (
    sk_produto integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    produto_id integer NOT NULL,
    nome varchar(120) NOT NULL,
    categoria varchar(80) NOT NULL
);

CREATE TABLE IF NOT EXISTS analytics.fct_vendas (
    sk_venda integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id integer NOT NULL,
    item_pedido_id integer NOT NULL,
    sk_tempo integer NOT NULL REFERENCES analytics.dim_tempo (sk_tempo),
    sk_cliente integer NOT NULL REFERENCES analytics.dim_cliente (sk_cliente),
    sk_produto integer NOT NULL REFERENCES analytics.dim_produto (sk_produto),
    quantidade integer NOT NULL,
    valor_total numeric(12, 2) NOT NULL
);

CREATE INDEX IF NOT EXISTS idx_fct_vendas_tempo ON analytics.fct_vendas (sk_tempo);
CREATE INDEX IF NOT EXISTS idx_fct_vendas_cliente ON analytics.fct_vendas (sk_cliente);
CREATE INDEX IF NOT EXISTS idx_fct_vendas_produto ON analytics.fct_vendas (sk_produto);
